v1-top section alignbmenst and fixes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,13 @@ html {
     background-color: black !important;
     overflow-x: hidden;
   }
-  
+  .header3:nth-of-type(1) {
+    background: linear-gradient(to right, #87FFB0, #B5FF87);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 8px;
+    letter-spacing: 13px;
+  }
   body {
     background-color: black !important;
   }
@@ -13,6 +19,7 @@ html {
       flex-direction: column;
     }
   }
+ 
   .smart-scroll {
     overflow-y: hidden;
   }
@@ -100,6 +107,10 @@ html {
   @font-face {
     font-family: Inter;
     src: url("https://www.xade.finance/fonts/static/Inter-Medium.ttf");
+  }
+  @font-face {
+    font-family: Euclid Circular A Regular;
+    src: url(./EuclidCircularARegular.ttf);
   }
   @font-face {
     font-family: Benzin-Bold;
@@ -10642,24 +10653,34 @@ html {
       position: relative;
       padding: 5px 20px;
     }
-    .button89:after {    
+    
+    .button89:after {
       background: none repeat scroll 0 0 transparent;
       bottom: 0;
       color: #fff;
       content: "";
       display: block;
       height: 2px;
-      left: 50%;
+      left: 0; /* Adjusted the left value to 0 */
       position: absolute;
       background: #5AF698;
-      transition: width 0.3s ease 0s, right 0.3s ease 0s;
-      width: 0;
+      transition: width 0.3s ease 0s, transform 0.3s ease 0s; /* Transitions the 'transform' property */
+      width: 30%;
     }
-    .button89:hover:after { 
-      width: 50%; 
-      left: 0; 
-      bottom: -10px;
+
+    #ras:after {
+      
+      opacity: 0.699999988079071;
+      background: #E3E3E3;
     }
+    
+    .button89:hover:after {
+      width: 100%; /* Changed the width to 100% */
+      transform: translateX(0); /* Added 'translateX(0)' to keep the line in place */
+    }
+    
+    
+    
     .button79 {
       color: #000;
       text-decoration: none;
@@ -10776,23 +10797,27 @@ html {
     font-family: Montreal;
     text-align: left;
     font-size: 60px;
-    line-height: 1.1;
+    line-height: 1.3;
     color: #f0f0f0;
+    width: 80%;
   }
   @media (max-width: 800px)
   {
     .header1 {
       padding-right: 1rem;
-      font-size: 3rem;
+      font-size: 2rem;
       line-height: 1.2;
+      width: auto;
     }
   }
   .subhead2 {
-    font-family: Vela;
-    text-align: left;
-    font-size: 22px;
-    line-height: 1.1;
-    color: #f0f0f0;
+    color: #B5B5B5;
+    font-family: Euclid Circular A Regular;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    width: 35rem;
   }
   .home {
     height: 20%;
@@ -10826,7 +10851,7 @@ html {
   }
 
   .video-container {
-    margin-top: 10%;
+    margin-top: 7%;
   }
   @media (min-width: 800px) {
     .video-container .leftsection {
@@ -10938,6 +10963,11 @@ html {
     .faqmain {
       font-size: 3rem;
     }
+
+    .header3:nth-of-type(1) {
+      width: auto;
+    }
+
   }
   .bettermain {
     margin-top: 3%;
@@ -11363,10 +11393,24 @@ text-fill-color: transparent;
       height: 100vh;
       display: flex;
   }
+ 
+  @media screen and (max-width:376px) {
+    .button89:after {
+      opacity: 0;
+
+    }
+
+    #ras:after {
+      opacity: 0;
+    }
+  }
 
   @media screen and (max-width: 800px) {
     .video-container {
       margin-top: 20%;
+    }
+    .subhead2 {
+      width: auto;
     }
   }
   .subheader3{
